@@ -10,7 +10,7 @@ namespace FatturaElettronica.Validators
         {
             RuleFor(x => x.DatiAnagraficiVettore)
                 .SetValidator(new DatiAnagraficiVettoreValidator())
-                .When(x=>!x.DatiAnagraficiVettore.IsEmpty());
+                .When(x => !x.DatiAnagraficiVettore.IsEmpty());
             RuleFor(x => x.MezzoTrasporto)
                 .Length(1, 80)
                 .Latin1SupplementValidator()
@@ -32,7 +32,11 @@ namespace FatturaElettronica.Validators
                 .When(x => !string.IsNullOrEmpty(x.TipoResa));
             RuleFor(x => x.IndirizzoResa)
                 .SetValidator(new IndirizzoResaValidator())
-                .When(x=>!x.IndirizzoResa.IsEmpty());
+                .When(x => !x.IndirizzoResa.IsEmpty());
+            RuleFor(x => x.PesoLordo)
+                .LessThanOrEqualTo(9999.99m);
+            RuleFor(x => x.PesoNetto)
+                .LessThanOrEqualTo(9999.99m);
         }
     }
 }
